package com.arkenna.indienest.backend.iam.domain.model.valueobjects;

public enum AccountType {
    PROGRAMMER,
    ARTIST,
    COMPOSER,
    STANDARD
}