@startuml
left to right direction
skinparam classAttributeIconSize 0

package "com.arkenna.indienest.backend.iam"{
    package "domain"{
        package "model"{
            package "aggregates"{
                class Account <<Aggregate root>>{
                    -userId: UserId,
                    -email: Email,
                    -password: Password,
                    -isActive: AccountAvailability
                    -role: AccountType
                    --
                    +Account(command: CreateAccountCommand)
                    +updateEmail(email: String): Void
                    +updatePassword(password: String): Void
                    +updateIsActive(isActive: Boolean): Void
                    +updateRole(role: String): Void
                }
                class User <<Aggregate root>>{
                    -name: UserName,
                    -phoneNumber: PhoneNumber,
                    --
                    +User(command: CreateUserCommand)
                    +updateName(name: String): Void
                    +updatePhoneNumber(phone: String): Void
                }
            }
            package "value objects"{
                record UserId <<Value object>>{
                    +userId: Integer
                }
                record Email <<Value object>>{
                    +email: String
                }
                record Password <<Value object>>{
                    +password: String
                }
                record AccountAvailability <<Value object>>{
                    +isActive: Boolean
                }
                enum AccountType <<Value object>>{
                    STANDARD
                    PROGRAMMER
                    ARTIST
                    COMPOSER
                }
                record UserName <<Value object>>{
                    +userName: String
                }
                record PhoneNumber <<Value object>>{
                    +phone: String
                }
            }
            package "commands"{
                record CreateAccountCommand <<Command>>{
                    +userId: Integer
                    +email: String
                    +password: String
                    +isActive: Boolean
                    +role: String
                }
                record CreateUserCommand <<Command>>{
                    +name: String,
                    +phoneNumber: String
                }
                record UpdateUserCommand <<Command>>{
                    +id: Integer
                    +name: String,
                    +phoneNumber: String
                }
                record SignInCommand{
                    +userName: String
                    +email: String
                    +password: String
                }
                record SignUpCommand{
                    +username: String,
                    +phoneNumber: String,
                    +email: String,
                    +password: String,
                    +role: String
                }
            }
            package "queries"{
                record GetAllAccountsQuery <<Query>>{
                }
                record GetAccountByIdQuery <<Query>>{
                    -id: Integer
                }
                record GetAllUsersQuery <<Query>>{
                }
                record GetUserByIdQuery <<Query>>{
                    -id: Integer
                }
            }
        }
        package "services"{
            interface AccountCommandService <<Service>>{
                +handle(CreateAccountCommand): Optional<Account>
                +handle(SignInCommand): Optional<ImmutablePair<Account,String>>
                +handle(SignUpCommand): Optional<Account>
            }
            interface UserCommandService <<Service>>{
                +handle(CreateUserCommand): Optional<User>
                +handle(UpdateUserCommand): Optional<User>
            }
            interface AccountQueryService <<Service>>{
                +handle(GetAllAccountsQuery): List<Account>
                +handle(GetAccountByIdQuery): Optional<Account>
            }
            interface UserQueryService <<Service>>{
                +handle(GetAllUsersQuery): List<User>
                +handle(GetUserByIdQuery): Optional<User>
            }
        }
    }
    package "infrastructure"{
        package "persistence"{
            package "jpa"{
                package "repositories"{
                    interface AccountRepository <<Repository>>{
                        +existsByEmail(Email): boolean
                    }
                    interface UserRepository <<Repository>>{
                        +existsByNameAndPhoneNumber(UserName, PhoneNumber): boolean
                    }
                }
            }
        }
    }
    package "application"{
        package "internal"{
            package "command services"{
                class AccountCommandServiceImpl <<Service>>{
                    -accountRepository: AccountRepository
                    -hashingService: HashingService
                    -tokenService: TokenService
                    +handle(CreateAccountCommand): Optional<Account>
                    +handle(SignInCommand): Optional<Pair<Account, String>>
                    +handle(SignUpCommand): Optional<Account>
                }
                class UserCommandServiceImpl <<Service>>{
                    -userRepository: UserRepository
                    +handle(CreateUserCommand): Optional<User>
                    +handle(UpdateUserCommand): Optional<User>
                }
            }
            package "query services"{
                class AccountQueryServiceImpl <<Service>>{
                    -accountRepository: AccountRepository
                    +handle(GetAllAccountsQuery): List<Account>
                    +handle(GetAccountByIdQuery): Optional<Account>
                }
                class UserQueryServiceImpl <<Service>>{
                    -userRepository: UserRepository
                    +handle(GetAllUsersQuery): List<User>
                    +handle(GetUserByIdQuery): Optional<User>
                }
            }
        }
        package "acl" {
            class IamContextFacadeImpl <<ACL>>{
                -accountCommandService: AccountCommandService
                -userCommandService: UserCommandService
                --
                +IamContextFacadeImpl(AccountCommandService, UserCommandService)
                +createAccount(userId: Integer, email: String, password: String, isActive: Boolean, role: String): Integer
                +createUser(name: String, phoneNumber: String): Integer
                +updateUser(id: Integer, name: String, phoneNumber: String): Integer
            }
        }
    }
    package "interfaces"{
        package "rest"{
            class AuthenticationController <<Controller>>{
                -accountCommandService: AccountCommandService
                --
                +AuthenticationController(AccountCommandService)
                +signIn(signInResource) : ResponseEntity<AuthenticatedAccountResource>
                +signUp(signUpResource) : ResponseEntity<AccountResource>
            }
            class AccountsController <<Controller>>{
                -accountCommandService: AccountCommandService
                -accountQueryService: AccountQueryService
                --
                +AccountsController(AccountCommandService, AccountQueryService)
                +createAccount(CreateAccountResource): ResponseEntity<AccountResource>
                +getAllAccounts(): ResponseEntity<List<AccountResource>>
                +getAccountById(id: Integer): ResponseEntity<AccountResource>
            }
            class UsersController <<Controller>>{
                -userCommandService: UserCommandService
                -userQueryService: UserQueryService
                +UsersController(UserCommandService, UserQueryService)
                +createUser(CreateUserResource): ResponseEntity<UserResource>
                +updateUser(UpdateUserCommand): ResponseEntity<UserResource>
                +getAllUsers(): ResponseEntity<List<UserResource>>
                +getUserById(id: Integer): ResponseEntity<UserResource>
            }
            package "resources"{
                record AccountResource <<Resource>>{
                    +id: Integer
                    +userId: Integer
                    +email: String
                    +password: String
                    +isActive: Boolean
                    +role: String
                }
                record UserResource <<Resource>>{
                    +id: Integer,
                    +name: String
                    +phoneNumber: String
                }
                record CreateAccountResource <<Resource>>{
                    +userId: Integer
                    +email: String
                    +password: String
                    +role: String
                }
                record CreateUserResource <<Resource>>{
                    +name: String
                    +phoneNumber: String
                }
                record UpdateUserResource <<Resource>>{
                    +name: String
                    +phoneNumber: String
                }
                record SignInResource<<Resource>>{
                    +username: String,
                    +email: String,
                    +password: String
                }
                record SignUpResource<<Resource>>{
                    +username: String,
                    +phoneNumber: String,
                    +email: String,
                    +password: String
                }
                record AuthenticatedAccountResource{
                    +id: Integer
                    +email: String,
                    +token: String
                }
            }
            package "transform"{
                class SignInCommandFromResourceAssembler <<Assembler>>{
                    +toCommandFromResource(signInResource: SignInResource): SignInCommand {static}
                }
                class SignUpCommandFromResourceAssembler <<Assembler>>{
                    +toCommandFromResource(resource: SignUpResource): SignUpCommand {static}
                }
                class CreateAccountCommandFromResourceAssembler<<Assembler>>{
                    +toCommandFromResource(createAccountResource: CreateAccountResource): CreateAccountCommand {static}
                }
                class CreateUserCommandFromResourceAssembler<<Assembler>>{
                    +toCommandFromResource(createUserResource: (CreateUserResource): CreateUserCommand {static}
                }
                class UpdateUserCommandFromResourceAssembler<<Assembler>>{
                    +toCommandFromResource(updateUserResource: UpdateUserResource): UpdateUserCommand {static}
                }
                class AuthenticatedAccountResourceFromEntityAssembler<<Assembler>>{
                    +toResourceFromEntity(account: Account, token: String): AuthenticatedAccountResource {static}
                }
                class AccountResourceFromEntityAssembler<<Assembler>>{
                    +toResourceFromEntity(account: Account): AccountResource {static}
                }
                class UserResourceFromEntityAssembler<<Assembler>>{
                    +toResourceFromEntity(user: User): UserResource {static}
                }
            }
        }

        package "acl"{
            interface IamContextFacade<<ACL>>{
                --
                +createAccount(userId: Integer, email: String, password: String, isActive: Boolean, role: String): Integer
                +createUser(name: String, phoneNumber: String): Integer
                +updateUser(id: Integer, name: String, phoneNumber: String): Integer
            }
        }
    }
}

'DOMAIN LAYER
'aggregates
User --> UserId
User --> UserName
User --> PhoneNumber
User ..> CreateUserCommand
Account --> UserId
Account -->Email
Account --> Password
Account --> AccountAvailability
Account --> AccountType
Account ..> CreateAccountCommand
'queries
GetUserByIdQuery --> UserId
'services
AccountCommandService ..> CreateAccountCommand
AccountCommandService ..> SignUpCommand
AccountCommandService ..> SignInCommand
AccountQueryService ..> GetAllAccountsQuery
AccountQueryService ..> GetAccountByIdQuery
UserCommandService ..> CreateUserCommand
UserCommandService ..> UpdateUserCommand
UserQueryService ..> GetAllUsersQuery
UserQueryService ..> GetUserByIdQuery

'APPLICATION LAYER
AccountCommandServiceImpl ..|> AccountCommandService
AccountCommandServiceImpl --> AccountRepository
UserCommandServiceImpl ..> UserCommandService
UserCommandServiceImpl --> UserRepository

AccountQueryServiceImpl ..|> AccountQueryService
AccountQueryServiceImpl --> AccountRepository
UserQueryServiceImpl ..|> UserQueryService
UserQueryServiceImpl --> UserRepository

IamContextFacadeImpl ..|> IamContextFacade
IamContextFacadeImpl --> AccountCommandService
IamContextFacadeImpl --> AccountQueryService
IamContextFacadeImpl --> UserCommandService
IamContextFacadeImpl --> UserQueryService

'INTERFACES LAYER
SignInCommandFromResourceAssembler ..> SignInResource
SignUpCommandFromResourceAssembler ..> SignUpResource
CreateAccountCommandFromResourceAssembler ..> CreateAccountResource
CreateUserCommandFromResourceAssembler ..> CreateUserResource
UpdateUserCommandFromResourceAssembler ..> UpdateUserResource
AccountResourceFromEntityAssembler ..> Account
UserResourceFromEntityAssembler ..> User
AuthenticatedAccountResourceFromEntityAssembler ..> Account
AuthenticationController ..> AuthenticatedAccountResource
AuthenticationController ..> AccountResource
AuthenticationController --> AccountCommandService
AccountsController ..> AccountResource
AccountsController --> AccountCommandService
AccountsController --> AccountQueryService
UsersController ..> UserResource
UsersController --> UserCommandService
UsersController --> UserQueryService






@enduml